kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100
      maxSurge: 0
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels: 
        app: web
    spec:
      containers: 
      - name: web
        image: dmitriyboon/webimage:alpine-1.14.2
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket: 
            port: 8000
        volumeMounts:
          - name: app
            mountPath: /app
      volumes:
        - name: app
          emptyDir: {}
